# tradebet

./: .gitignore  Anchor.toml  README.md  SUBMISSION.md  brand.md  package.json
.cargo/: config.toml
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/faucet/: route.ts
frontend/app/api/fixtures/: route.ts
frontend/app/api/market/: route.ts
frontend/app/api/rpc/: route.ts
frontend/app/api/scores/: route.ts
frontend/app/demo/: page.tsx
frontend/app/trade/: page.tsx
frontend/components/: connect-button.tsx  logo.tsx  site-header.tsx
frontend/components/landing/: hero-canvas.tsx  hero-scene.tsx  live-markets.tsx  markets-hub.tsx
frontend/components/solana/: providers.tsx
frontend/components/trade/: onchain-terminal.tsx  price-chart.tsx  terminal.tsx  trade-panel.tsx
frontend/lib/: sim.ts  utils.ts
frontend/lib/program/: client.ts  deployment.json  inplay.ts  useScores.ts  useTradebet.ts
keeper/: package-lock.json  package.json
keeper/idl/: inplay.json
keeper/src/: config.ts  fixtures.ts  onboard.ts  oracle.ts  setup-devnet.ts  stream.ts  test-trade.ts  winprob.ts
programs/inplay/: Cargo.toml
programs/inplay/src/: errors.rs  lib.rs  state.rs
tests/: inplay.ts
