[package]
name = "inplay"
version = "0.1.0"
description = "InPlay — a perp DEX for live football win-probability, oracle-priced by TxODDS TxLINE"
edition = "2021"
# Solana's SBF toolchain ships rustc 1.79; pin our MSRV so the fallback resolver
# (see .cargo/config.toml) avoids deps that require a newer rustc / edition2024.
rust-version = "1.79.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "inplay"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
